--- a/Forum/Components/RedirectToLogin.razor
+++ b/Forum/Components/RedirectToLogin.razor
@@ -2,15 +2,15 @@
 
 @code {
 	[CascadingParameter]
-	private Task<AuthenticationState> authenticationStateTask { get; set; }
+	private Task<AuthenticationState> AuthenticationStateTask { get; set; }
 
 	protected override async Task OnInitializedAsync()
 	{
-		var authState = await authenticationStateTask;
+		var authState = await AuthenticationStateTask;
 
 		if (authState?.User?.Identity is null || !authState.User.Identity.IsAuthenticated)
 		{
-			string returnUrl = NavMan.ToBaseRelativePath(NavMan.Uri);
+			var returnUrl = NavMan.ToBaseRelativePath(NavMan.Uri);
 
 			if (string.IsNullOrWhiteSpace(returnUrl))
 				NavMan.NavigateTo("/login", true);
