--- a/Forum/Components/Comment.razor
+++ b/Forum/Components/Comment.razor
@@ -1,7 +1,4 @@
 ﻿@using Microsoft.EntityFrameworkCore
-@inject IDbContextFactory<Model.Database> DbContext
-@inject CommentService CommentService
-@implements IDisposable
 
 <style>
 	.border-left {
@@ -33,10 +30,10 @@
 		<pre class="txt-title">@CommentModel.Text</pre>
 		<button class="btn-mini" @onclick="ToggleCommentField">Answer</button>
 		<div class="@_cfClass">
-			<CommentField ThreadId="@CommentModel.ThreadId" ParentId="@CommentModel.Id" />
+			<CommentField Thread="@CommentModel.Thread" Comment="@CommentModel" /> @* TODO: .Thread AND Model? *@
 		</div>
 
-		@foreach (Entity.Comment c in _childs)
+		@foreach (var c in _children)
 		{
 			<Comment CommentModel="c" />
 		}
@@ -46,22 +43,21 @@
 @code {
 	[Parameter]
 	public Entity.Comment CommentModel { get; set; }
+	
+	[CascadingParameter]
+	private Model.Database DbContext { get; set; }
 
-	private List<Entity.Comment> _childs;
+	private List<Entity.Comment> _children;
 	private string _cfClass = "hidden";
 	private string _collapseClass = "";
 	private string _clpMsg = "-";
 
-	protected async override Task OnInitializedAsync()
+	protected override void OnInitialized()
 	{
-		Update();
-		// We want to assign the result of the method, which it doesn't has (void),
-		// which is why we need to pass the method _without_ parentheses.
-		CommentService.CommentEvent += Update;
-		//CommentService.CommentEvent += Update();
-
-		// Alternatively a lambda expression could be used like this:
-		// CommentService.CommentEvent += () => Update();
+		_children = DbContext.Comments
+			.Include(c => c.Childs)
+			.ThenInclude(c => c.Creator)
+			.First(c => c.Id == CommentModel.Id).Childs.ToList();
 	}
 
 	private void ToggleCommentField()
@@ -84,24 +80,5 @@
 			_collapseClass = "collapsed";
 			_clpMsg = "+";
 		}
-	}
-
-	private void Update()
-	{
-		using var db = DbContext.CreateDbContext();
-
-		_childs = db.Comments
-			.Include(c => c.Childs)
-				.ThenInclude(c => c.Creator)
-			.First(c => c.Id == CommentModel.Id).Childs.ToList();
-
-		_cfClass = "hidden";
-
-		InvokeAsync(() => StateHasChanged());
-	}
-
-	public void Dispose()
-	{
-		CommentService.CommentEvent -= Update;
 	}
 }
