--- a/Forum/Pages/Register.razor
+++ b/Forum/Pages/Register.razor
@@ -4,11 +4,9 @@
 @using Forum.Entity;
 @using System.ComponentModel.DataAnnotations;
 @using Microsoft.Extensions.Configuration 
-@inject IDbContextFactory<Model.Database> DbContext
 @inject NavigationManager NavigationManager 
 @inject NavigationManager NavMan 
 @inject IConfiguration Config
-@inject Data.InfoMessage MessageService 
 
 <div class="main text-center mt-5 ml-auto mr-auto form-bigger">
 	<EditForm class="form-bigger" Model="@_registerModel" OnValidSubmit="HashPw">
@@ -42,17 +40,18 @@
 
 @code {
 	[CascadingParameter]
-	private Task<AuthenticationState> authenticationStateTask { get; set; }
+	private Task<AuthenticationState> AuthenticationStateTask { get; set; }
 
-	private RegisterModel _registerModel = new RegisterModel();
+	[CascadingParameter]
+	private Model.Database DbContext { get; set; }
+	
+	private readonly RegisterModel _registerModel = new();
 
-	private string _message;
-
-	protected async override Task OnInitializedAsync()
+	protected override async Task OnInitializedAsync()
 	{
-		var authenticationState = await authenticationStateTask;
+		var authState = await AuthenticationStateTask;
 
-		if (authenticationState.User.Identity.IsAuthenticated)
+		if (authState.User.Identity.IsAuthenticated)
 		{
 			NavigationManager.NavigateTo("/");
 		}
@@ -60,31 +59,23 @@
 
 	private async Task HashPw()
 	{
-		string pwHash = BCrypt.EnhancedHashPassword(
+		var pwHash = BCrypt.EnhancedHashPassword(
 			_registerModel.Password,
 			Config.GetValue<int>("Workfactor"));
 
-		using var db = DbContext.CreateDbContext();
-
-		if (_registerModel.AccountName.Contains('@'))
+		if (DbContext.Users.Where(u => u.AccountName == _registerModel.AccountName).Any())
 		{
-			_message = "Symbol '@' not allowed.";
+			// TODO: Display info "Username already exists."
 			return;
 		}
 
-		if (db.Users.Where(u => u.AccountName == _registerModel.AccountName).Any())
+		if (DbContext.Users.Where(u => u.Email == _registerModel.Email).Any())
 		{
-			_message = "Username already exists.";
+			// TODO: Display info "There already is an account with this email address."
 			return;
 		}
 
-		if (db.Users.Where(u => u.Email == _registerModel.Email).Any())
-		{
-			_message = "There already is an account with this email address.";
-			return;
-		}
-
-		User user = new User()
+		var user = new User()
 		{
 			AccountName = _registerModel.AccountName,
 			Email = _registerModel.Email,
@@ -93,10 +84,10 @@
 
 		try
 		{
-			await db.Users.AddAsync(user);
-			await db.SaveChangesAsync();
+			await DbContext.Users.AddAsync(user);
+			await DbContext.SaveChangesAsync();
 
-			MessageService.Message = "Account created successfully.";
+			// TODO: Display info "Account created successfully."
 			NavigationManager.NavigateTo("/login");
 		}
 		catch (Exception ex)
