--- a/Forum/Pages/CreateThread.razor
+++ b/Forum/Pages/CreateThread.razor
@@ -3,8 +3,10 @@
 @attribute [Authorize(Policy = "IsPoster")]
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.Extensions.Configuration
+@using InfoMessage = Forum.Data.InfoMessage
 @inject NavigationManager NavMan
 @inject IConfiguration Config
+@inject Data.InfoMessage MessageService
 
 <div class="main text-center mt-5 ml-auto mr-auto form-bigger">
 	<form @onsubmit="StoreThread" class="form-bigger">
@@ -40,7 +42,7 @@
 	private string _content;
 	private string _tags;
 
-	protected async override Task OnInitializedAsync()
+	protected override async Task OnInitializedAsync()
 	{
 		_forums = DbContext.Forums.ToArray();
 	}
@@ -49,7 +51,7 @@
 	{
 		if (string.IsNullOrEmpty(_content))
 		{
-			// TODO: Display info "Content needs to be between 1 and 20798 characters long."
+			MessageService.Message = "Content needs to be between 1 and 20798 characters long.";
 			return;
 		}
 
@@ -74,7 +76,8 @@
 			System.IO.File.WriteAllText(uploadPath, _content);
 			await DbContext.SaveChangesAsync();
 
-			// TODO: Display info "Thread uploaded."
+			MessageService.Message = "Thread uploaded.";
+			
 			NavMan.NavigateTo("/thread/" + newThread.Id);
 		}
 		catch (Exception ex)
@@ -82,7 +85,8 @@
 			Console.Error.WriteLine("\n\n\n!!!!!!!\n\n\n");
 			Console.Error.WriteLine(ex.ToString());
 			Console.Error.WriteLine("\n\n\n!!!!!!!\n\n\n");
-			// TODO: Display info "Failed to upload post."
+
+			MessageService.Message = "Failed to upload post.";
 		}
 	}
 
