--- a/Forum/Pages/Login.razor
+++ b/Forum/Pages/Login.razor
@@ -1,11 +1,10 @@
 ﻿@page "/login"
-@using Microsoft.EntityFrameworkCore
-@using System.Security.Claims
 @using System.ComponentModel.DataAnnotations
 @using System.Text.RegularExpressions
 @inject AuthenticationStateProvider AuthProvider
 @inject NavigationManager NavigationManager
 @inject IMailService MailService
+@inject Data.InfoMessage MessageService
 
 <div class="main text-center mt-5 ml-auto mr-auto">
 	<AuthorizeView>
@@ -61,7 +60,7 @@
 				await ((Forum.Controller.AuthenticationStateController)AuthProvider)
 					.ValidateLogin(_loginModel.Identifier, _loginModel.Password);
 
-				// TODO: Display info "You are now logged in."
+				MessageService.Message = "You are now logged in.";
 
 				var uriBuilder = new UriBuilder(NavigationManager.Uri);
 				var url = System.Web.HttpUtility.ParseQueryString(uriBuilder.Query);
@@ -72,7 +71,7 @@
 			}
 			catch (Exception ex)
 			{
-				// TODO: Display info "Login failed."
+				MessageService.Message = "Login failed.";
 			}
 		}
 	}
