--- a/Forum/Pages/_Host.cshtml
+++ b/Forum/Pages/_Host.cshtml
@@ -15,7 +15,10 @@
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link href="css/site.css" rel="stylesheet" />
 	<link href="Forum.styles.css" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin-ext" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet"> 
 </head>
 <body>
     @*Prerendering needs to be disabled for Session Handling to work.*@
